--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Web<span class="nav-logo-span">Studio</span>
                 </a>
                 <ul class="nav-ul">
-                    <li><a href="./index.html" class="nav-href Studio">Studio</a></li>
+                    <li class="first-li"><a href="./index.html" class="nav-href Studio">Studio</a></li>
                     <li><a href="" class="nav-href Portfolio">Portfolio</a></li>
                     <li><a href="" class="nav-href Contacts">Contacts</a></li>
                 </ul>
@@ -48,28 +48,28 @@
                 <ul class="section-twoo-ul">
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/antenna 1.jpg" alt="logo">
+                            <img src="./images/antenna.jpg" alt="logo">
                         </div>
                         <h3 class="section-twoo-text">Strategy</h3>
                         <p class="section-twoo-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/clock 1.jpg" alt="logo">
+                            <img src="./images/clock.jpg" alt="logo">
                         </div>
                         <h3 class="section-twoo-text">Punctuality</h3>
                         <p class="section-twoo-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/diagram 1.jpg" alt="logo">
+                            <img src="./images/diagram.jpg" alt="logo">
                         </div>
                         <h3 class="section-twoo-text">Diligence</h3>
                         <p class="section-twoo-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/astronaut 1.jpg" alt="logo">
+                            <img src="./images/astronaut.jpg" alt="logo">
                         </div>
                         <h3 class="section-twoo-text">Technologies</h3>
                         <p class="section-twoo-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
