--- a/index.html
+++ b/index.html
@@ -48,28 +48,36 @@
                 <ul class="section-twoo-ul">
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/antenna.jpg" alt="logo">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
                         </div>
                         <h3 class="section-twoo-text">Strategy</h3>
                         <p class="section-twoo-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/clock.jpg" alt="logo">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
                         </div>
                         <h3 class="section-twoo-text">Punctuality</h3>
                         <p class="section-twoo-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/diagram.jpg" alt="logo">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
                         </div>
                         <h3 class="section-twoo-text">Diligence</h3>
                         <p class="section-twoo-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="section-twoo-li">
                         <div class="section-twoo-svg_div">
-                            <img src="./images/astronaut.jpg" alt="logo">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
                         </div>
                         <h3 class="section-twoo-text">Technologies</h3>
                         <p class="section-twoo-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -87,17 +95,25 @@
                             <h3 class="section-three-text">Mark Guerrero</h3>
                             <p class="section-three-p">Product Designer</p>
                             <ul class="social-team">
-                                <li class="social-team-li"><a href="https://www.instagram.com/" target="_blank">
-                                    <svg width="16" height="16"><use href="#icon-instagram"></use></svg>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.instagram.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
                                 </a></li>
-                                <li class="social-team-li"><a href="https://twitter.com/" target="_blank">
-                                    <svg width="16" height="16"><use href="#icon-twitter"></use></svg>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://twitter.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
                                 </a></li>
-                                <li class="social-team-li"><a href="https://www.facebook.com/" target="_blank">
-                                    <svg width="16" height="16"><use href="#icon-facebook"></use></svg>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.facebook.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
                                 </a></li>
-                                <li class="social-team-li"><a href="https://www.linkedin.com/" target="_blank">
-                                    <svg width="16" height="16" class="icon"><use href="#icon-linkedin"></use></svg>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.linkedin.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
                                 </a></li>
                             </ul>
                         </div>
@@ -107,6 +123,28 @@
                         <div class="section-three-li-div">
                             <h3 class="section-three-text">Tom Ford</h3>
                             <p class="section-three-p">Frontend Developer</p>
+                            <ul class="social-team">
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.instagram.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://twitter.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.facebook.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.linkedin.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="section-three-li">
@@ -114,6 +152,28 @@
                         <div class="section-three-li-div">
                             <h3 class="section-three-text">Camila Garcia</h3>
                             <p class="section-three-p">Marketing</p>
+                            <ul class="social-team">
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.instagram.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://twitter.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.facebook.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.linkedin.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="section-three-li">
@@ -121,6 +181,28 @@
                         <div class="section-three-li-div">
                             <h3 class="section-three-text">Daniel Wilson</h3>
                             <p class="section-three-p">UI Designer</p>
+                            <ul class="social-team">
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.instagram.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://twitter.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.facebook.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-team-li"><a class="social-team-li-a" href="https://www.linkedin.com/" target="_blank">
+                                    <svg width="16" height="16" class="icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
