--- a/index.html
+++ b/index.html
@@ -213,42 +213,72 @@
                 <h2 class="section-four-main-text">Our Portfolio</h2>
                 <ul class="section-four-ul">
                     <li class="section-four-li">
-                        <img src="./images/img2_1.jpg" alt="Bank app" width="360">
+                        <div class="section-four-img_div">
+                            <img src="./images/img2_1.jpg" alt="Bank app" width="360">
+                            <p class="p-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="section-four-li-div">
                             <h3 class="section-four-text">Banking App</h3>
                             <p class="section-four-p">App</p>
                         </div>
                     </li>
                     <li class="section-four-li">
-                        <img src="./images/img2_2.jpg" alt="Payment" width="360">
+                        <div class="section-four-img_div">
+                            <img src="./images/img2_2.jpg" alt="Payment" width="360">
+                            <p class="p-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="section-four-li-div">
                             <h3 class="section-four-text">Cashless Payment</h3>
                             <p class="section-four-p">Marketing</p>
                         </div>
                     </li>
                     <li class="section-four-li">
-                        <img src="./images/img2_3.jpg" alt="Meditation App" width="360">
+                        <div class="section-four-img_div">
+                            <img src="./images/img2_3.jpg" alt="Meditation App" width="360">
+                            <p class="p-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="section-four-li-div">
                             <h3 class="section-four-text">Meditation App</h3>
                             <p class="section-four-p">App</p>
                         </div>
                     </li>
                     <li class="section-four-li">
-                        <img src="./images/img2_4.jpg" alt="Taxi" width="360">
+                        <div class="section-four-img_div">
+                            <img src="./images/img2_4.jpg" alt="Taxi" width="360">
+                            <p class="p-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="section-four-li-div">
                             <h3 class="section-four-text">Taxi Service</h3>
                             <p class="section-four-p">Marketing</p>
                         </div>
                     </li>
                     <li class="section-four-li">
-                        <img src="./images/img2_5.jpg" alt="Phone wallpaper" width="360">
+                        <div class="section-four-img_div">
+                            <img src="./images/img2_5.jpg" alt="Phone wallpaper" width="360">
+                            <p class="p-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="section-four-li-div">
                             <h3 class="section-four-text">Screen Illustrations</h3>
                             <p class="section-four-p">Design</p>
                         </div>
                     </li>
                     <li class="section-four-li">
-                        <img src="./images/img2_6.jpg" alt="Woomen" width="360">
+                        <div class="section-four-img_div">
+                            <img src="./images/img2_6.jpg" alt="Woomen" width="360">
+                            <p class="p-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="section-four-li-div">
                             <h3 class="section-four-text">Online Courses</h3>
                             <p class="section-four-p">Marketing</p>
@@ -264,6 +294,33 @@
                 Web<span class="footer-logo-span">Studio</span>
             </a>
             <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div class="footer-social">
+            <p class="footer-social-text">
+                Social media
+            </p>
+            <ul class="social-icon">
+                <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.instagram.com/" target="_blank">
+                    <svg width="24" height="24" class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a></li>
+                <li class="social-icon-li"><a class="social-icon-li-a" href="https://twitter.com/" target="_blank">
+                    <svg width="24" height="24" class="icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a></li>
+                <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.facebook.com/" target="_blank">
+                    <svg width="24" height="24" class="icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a></li>
+                <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.linkedin.com/" target="_blank">
+                    <svg width="24" height="24" class="icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a></li>
+            </ul>
         </div>
     </footer>
 </body>
