--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Web<span class="nav-logo-span">Studio</span>
                 </a>
                 <ul class="nav-ul">
-                    <li class="first-li"><a href="./index.html" class="nav-href Studio">Studio</a></li>
+                    <li><a href="./index.html" class="nav-href Studio">Studio</a></li>
                     <li><a href="" class="nav-href Portfolio">Portfolio</a></li>
                     <li><a href="" class="nav-href Contacts">Contacts</a></li>
                 </ul>
@@ -290,10 +290,12 @@
     </main>
     <footer class="footer">
         <div class="footer-main-div container">
-            <a href="./index.html" class="footer-logo">
-                Web<span class="footer-logo-span">Studio</span>
-            </a>
-            <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <div class="href-and-logo_div">
+                <a href="./index.html" class="footer-logo">
+                    Web<span class="footer-logo-span">Studio</span>
+                </a>
+                <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
         </div>
         <div class="footer-social">
             <p class="footer-social-text">
