--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     Web<span class="nav-logo-span">Studio</span>
                 </a>
                 <ul class="nav-ul">
-                    <li><a href="./index.html" class="nav-href Studio">Studio</a></li>
-                    <li><a href="" class="nav-href Portfolio">Portfolio</a></li>
-                    <li><a href="" class="nav-href Contacts">Contacts</a></li>
+                    <li><a href="./index.html" class="nav-href studio">Studio</a></li>
+                    <li><a href="" class="nav-href portfolio">Portfolio</a></li>
+                    <li><a href="" class="nav-href contacts">Contacts</a></li>
                 </ul>
             </nav>
             <address class="address">
